--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Submodules/JSONKit"]
 	path = Submodules/JSONKit
 	url = https://github.com/laok/JSONKit.git
+[submodule "Submodules/MKNetworkKit"]
+	path = Submodules/MKNetworkKit
+	url = https://github.com/laok/JSONKit.git
